--- a/ejs/galleryST.ejs
+++ b/ejs/galleryST.ejs
@@ -16,16 +16,13 @@
         <section id="content">
             <div class="wrapper1">
                 <div class="heading1 fade-in">
-                    <h2>Clínica Gynébe de Santo Tirso</h2>
+                    <h2>
+                        <%= galleryST.title %>
+                    </h2>
                 </div>
                 <div class="box2-wrapper2">
-                    <h6 class="fade-in">A Clínica Gynébe nasceu em 2003 no coração da cidade do Porto como um espaço
-                        dedicado essencialmente à saúde da mulher e da criança. Em 2005 abriu uma segunda unidade em
-                        Santo
-                        Tirso. Ambas as clínicas oferecem uma localização central com excelente acessibilidade
-                        pedonal, por
-                        meio de transportes públicos ou viaturas próprias, dada a facilidade de vários parques
-                        próximos.
+                    <h6 class="fade-in">
+                        <%= galleryST.text %>
                     </h6>
                 </div>
             </div>
@@ -33,50 +30,78 @@
                 <div class="box6 img18 fade-in">
                     <img src="../images/EVO_1810.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
-                        <h5>Sala de</h5>
-                        <h4>Espera</h4>
+                        <h5>
+                            <%= galleryST.images.text %>
+                        </h5>
+                        <h4>
+                            <%= galleryST.images.waitRoom %>
+                        </h4>
                     </span>
                 </div>
                 <div class="box6 img19 fade-in">
                     <img src="../images/EVO_1813.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
-                        <h5>Sala de</h5>
-                        <h4>Espera</h4>
+                        <h5>
+                            <%= galleryST.images.text %>
+                        </h5>
+                        <h4>
+                            <%= galleryST.images.waitRoom %>
+                        </h4>
                     </span>
                 </div>
                 <div class="box6 img20 fade-in">
                     <img src="../images/EVO_1818.jpg" alt="Sala de Espera" />
                     <span class="img-content-hover">
-                        <h5>Sala de</h5>
-                        <h4>Espera</h4>
+                        <h5>
+                            <%= galleryST.images.text %>
+                        </h5>
+                        <h4>
+                            <%= galleryST.images.waitRoom %>
+                        </h4>
                     </span>
                 </div>
                 <div class="box6 img21 fade-in">
                     <img src="../images/EVO_1826.jpg" alt="Logo" />
                     <span class="img-content-hover">
-                        <h5>Logo da</h5>
-                        <h4>Clínica Gynébe</h4>
+                        <h5>
+                            <%= galleryST.images.logoText %>
+                        </h5>
+                        <h4>
+                            <%= galleryST.images.logo %>
+                        </h4>
                     </span>
                 </div>
                 <div class="box6 img22 fade-in">
                     <img src="../images/EVO_1847.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
-                        <h5>Sala de</h5>
-                        <h4>Ginecologia e Obstetrícia</h4>
+                        <h5>
+                            <%= galleryST.images.text %>
+                        </h5>
+                        <h4>
+                            <%= galleryST.images.gyne %>
+                        </h4>
                     </span>
                 </div>
                 <div class="box6 img23 fade-in">
                     <img src="../images/EVO_1855.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
-                        <h5>Sala de</h5>
-                        <h4>Ginecologia e Obstetrícia</h4>
+                        <h5>
+                            <%= galleryST.images.text %>
+                        </h5>
+                        <h4>
+                            <%= galleryST.images.gyne %>
+                        </h4>
                     </span>
                 </div>
                 <div class="box6 img24 fade-in">
                     <img src="../images/EVO_1859.jpg" alt="Sala de Ginecologia e Obstetrícia" />
                     <span class="img-content-hover">
-                        <h5>Sala de</h5>
-                        <h4>Ginecologia e Obstetrícia</h4>
+                        <h5>
+                            <%= galleryST.images.text %>
+                        </h5>
+                        <h4>
+                            <%= galleryST.images.gyne %>
+                        </h4>
                     </span>
                 </div>
             </div>
@@ -120,7 +145,7 @@
             <script src="../js/headerNavbar.js"></script>
             <script src="../js/headerNavbarButtons.js"></script>
             <script src="../js/carousel.js"></script>
-            <script src="../js/gallery.js"></script>
+            <script src="../js/galleryST.js"></script>
 </body>
 
 </html>
