--- a/ejs/privacy.ejs
+++ b/ejs/privacy.ejs
@@ -16,7 +16,9 @@
         <section id="content" class="common">
             <div class="wrapper1 wrapper1__inset4">
                 <div class="heading1 fadeIn">
-                    <h2>Política Privacidade</h2>
+                    <h2>
+                        <%= privacy.title %>
+                    </h2>
                 </div>
                 <div class="box7-wrapper1">
                     <div class="box7 fadeIn">
