--- a/ejs/specialties.ejs
+++ b/ejs/specialties.ejs
@@ -17,25 +17,15 @@
             <div class="overlay"></div>
             <div class="wrapper1 wrapper1__inset2">
                 <div class="heading1 fade-in">
-                    <h2>Os nossos serviços</h2>
+                    <h2>
+                        <%= specialties.title %>
+                    </h2>
                 </div>
                 <div class="box4-wrapper2">
                     <div class="box4">
-                        <h6 class="fade-in">A Clínica Gynébe é caracterizada pela qualidade do corpo clínico,
-                            diferenciação
-                            técnica dos
-                            serviços prestados e a forte componente humana e empenho de todos os profissionais na
-                            satisfação
-                            e bem estar do doente.
-                            A Clínica Gynébe pauta-se pelo seu dinamismo e constante inovação e actualização de
-                            conhecimentos científicos, aliada à disponibilidade de tecnologia avançada, adaptada à
-                            prestação
-                            de cuidados de saúde personalizados e diferenciados.
-                            Nesta clínica há uma estreita inter-relação com outras áreas clínicas e especialidades
-                            médicas,
-                            permitindo sempre que necessário, consulta multidisciplinar, com estudo e tratamento das
-                            várias
-                            patologias do doente, totalmente integradas.</h6>
+                        <h6 class="fade-in">
+                            <%= specialties.text %>
+                        </h6>
                     </div>
                 </div>
             </div>
@@ -46,28 +36,48 @@
                             <img class="fade-in" src="../images/gyne.png" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
-                            <a href="mca.html">Ginecologia</a>
+                            <a href="mca.html">
+                                <%= specialties.gyne.title %>
+                            </a>
                         </h3>
                         <p class="fade-in">
-                            O seguimento ginecológico regular desde a adolescência até a menopausa é essencial na
-                            prevenção e tratamento de doenças ginecológicas e de transmissão sexual, bem como no
-                            rastreio do
-                            cancro ginecológico.
-                            A Ginecologia engloba:
+                            <%= specialties.gyne.text %>
+                        </p>
+                        <p class="fade-in">
+                            <%= specialties.gyne.text2 %>
                         </p>
                         <button aria-label="Ginecologia"><i class="fas fa-chevron-down"></i></button>
                         <ul class="list1__inset1">
-                            <li>Planeamento Familiar/Contraceção (incluindo introdução e remoção de DIU e Implante)
+                            <li>
+                                <%= specialties.gyne.list1 %>
                             </li>
-                            <li>Sexualidade</li>
-                            <li>Hemorragias Uterinas</li>
-                            <li>Miomas Uterinos</li>
-                            <li>Endometriose</li>
-                            <li>Estudo da Infertilidade do Casal</li>
-                            <li>Menopausa</li>
-                            <li>Ecografia Ginecológica 3D/4D</li>
-                            <li>Pequena Cirurgia</li>
-                            <li>Cirurgias Ginecológicas</li>
+                            <li>
+                                <%= specialties.gyne.list2 %>
+                            </li>
+                            <li>
+                                <%= specialties.gyne.list3 %>
+                            </li>
+                            <li>
+                                <%= specialties.gyne.list4 %>
+                            </li>
+                            <li>
+                                <%= specialties.gyne.list5 %>
+                            </li>
+                            <li>
+                                <%= specialties.gyne.list6 %>
+                            </li>
+                            <li>
+                                <%= specialties.gyne.list7 %>
+                            </li>
+                            <li>
+                                <%= specialties.gyne.list8 %>
+                            </li>
+                            <li>
+                                <%= specialties.gyne.list9 %>
+                            </li>
+                            <li>
+                                <%= specialties.gyne.list10 %>
+                            </li>
                         </ul>
                     </div>
                     <div id="obs" class="box5">
@@ -75,23 +85,45 @@
                             <img class="fade-in" src="../images/page3_img2.png" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
-                            <a href="mca.html">Obstetrícia</a>
+                            <a href="mca.html">
+                                <%= specialties.obs.title %>
+                            </a>
                         </h3>
                         <p class="fade-in">
-                            A Obstetrícia faz o acompanhamento desde da pré-concepção ao pós-parto, em situações
-                            normais e
-                            com patologia.<br>A Obstetrícia engloba uma vasta área de cuidados, tais como:</p>
+                            <%= specialties.obs.text %>
+                        </p>
+                        <p class="fade-in">
+                            <%= specialties.obs.text2 %>
+                        </p>
                         <button aria-label="Obstetrícia"><i class="fas fa-chevron-down"></i></button>
                         <ul class="list1__inset1">
-                            <li>Aconselhamento Pré-concepcional</li>
-                            <li>Vigilância de Gravidez Normal e de Risco</li>
-                            <li>Ecografia obstétrica 1ºTrimestre diferenciada</li>
-                            <li>Rastreio de Trissomias</li>
-                            <li>Rastreio de Pré-Eclâmpsia e Parto Pré-termo</li>
-                            <li>Rastreio de Restrição de Crescimento Fetal</li>
-                            <li>Ecografias obstétricas 3D/4D</li>
-                            <li>Cardiotocografia</li>
-                            <li>Acompanhamento durante o Parto Normal, Instrumentado e Cirúrgico</li>
+                            <li>
+                                <%= specialties.obs.list1 %>
+                            </li>
+                            <li>
+                                <%= specialties.obs.list2 %>
+                            </li>
+                            <li>
+                                <%= specialties.obs.list3 %>
+                            </li>
+                            <li>
+                                <%= specialties.obs.list4 %>
+                            </li>
+                            <li>
+                                <%= specialties.obs.list5 %>
+                            </li>
+                            <li>
+                                <%= specialties.obs.list6 %>
+                            </li>
+                            <li>
+                                <%= specialties.obs.list7 %>
+                            </li>
+                            <li>
+                                <%= specialties.obs.list8 %>
+                            </li>
+                            <li>
+                                <%= specialties.obs.list9 %>
+                            </li>
                         </ul>
                     </div>
 
@@ -100,26 +132,34 @@
                             <img class="fade-in" src="../images/pediatrics.jpg" alt="">
                         </a>
                         <h3 class="h3__inset2 fade-in">
-                            <a href="gv.html">Pediatria</a>
+                            <a href="gv.html">
+                                <%= specialties.ped.title %>
+                            </a>
                             <!-- https://unsplash.com/photos/JcrysJBO8kQ -->
                         </h3>
                         <p class="fade-in">
-                            A pediatria acompanha o recém-nascido desde o parto até ao início da vida adulta. O
-                            seguimento
-                            regular em Pediatria tem como objetivo o crescimento saudável e promoção do bem-estar
-                            físico e
-                            psíquico das crianças e adolescentes, actuando com carácter preventivo e curativo.
-                            A consulta de Pediatria engloba uma vasta área, tal como:
+                            <%= specialties.ped.text %>
+                        </p>
+                        <p class="fade-in">
+                            <%= specialties.ped.text2 %>
                         </p>
                         <button aria-label="Pediatria"><i class="fas fa-chevron-down"></i></button>
                         <ul class="list1__inset1">
-                            <li>Crescimento e desenvolvimento saudável e adequado</li>
-                            <li>Aconselhamento sobre alimentação</li>
-                            <li>Aconselhamento sobre vacinação</li>
-                            <li>Diagnóstico e decisão terapêutica das situações com patologia</li>
-                            <li>Identificação de casos com necessidade de intervenção multidisciplinar com outras
-                                áreas
-                                clínicas</li>
+                            <li>
+                                <%= specialties.ped.list1 %>
+                            </li>
+                            <li>
+                                <%= specialties.ped.list2 %>
+                            </li>
+                            <li>
+                                <%= specialties.ped.list3 %>
+                            </li>
+                            <li>
+                                <%= specialties.ped.list4 %>
+                            </li>
+                            <li>
+                                <%= specialties.ped.list5 %>
+                            </li>
                         </ul>
                     </div>
 
@@ -128,27 +168,43 @@
                             <img class="fade-in" src="../images/endo.jpg" alt="">
                         </a>
                         <h3 class="h3__inset3 fade-in">
-                            <a href="lc.html">Endocrinologia</a>
+                            <a href="lc.html">
+                                <%= specialties.endo.title %>
+                            </a>
                             <!-- https://unsplash.com/photos/Nqj2XWHy4K0 -->
                         </h3>
-                        <p class="fade-in">A endocrinologia é a especialidade médica que se dedica ao diagnóstico e
-                            tratamento das perturbações do sistema endócrino, composto pelas glândulas produtoras de
-                            hormonas responsáveis pelo desenvolvimento, reprodução e metabolismo normais.</p>
-                        <p class="fade-in">A tiróide, o pâncreas, a hipófise, as suprarrenais, as paratiróides, os
-                            ovários e
-                            os testículos, são as glândulas endócrinas mais conhecidas, no entanto o osso e o tecido
-                            adiposo
-                            têm também um papel importante na produção de hormonas.</p>
-                        <p class="fade-in">As situações que mais levam o paciente a consulta são:</p>
+                        <p class="fade-in">
+                            <%= specialties.endo.text %>
+                        </p>
+                        <p class="fade-in">
+                            <%= specialties.endo.text2 %>
+                        </p>
+                        <p class="fade-in">
+                            <%= specialties.endo.text3 %>
+                        </p>
                         <button aria-label="Endocrinologia"><i class="fas fa-chevron-down"></i></button>
                         <ul class="list1__inset1">
-                            <li>Diabetes</li>
-                            <li>Obesidade</li>
-                            <li>Doença metabólica</li>
-                            <li>Patologia da tiróide (hipertiroidismo, hipotiroidismo, nódulos, cancro)</li>
-                            <li>Distúrbios do crescimento e da puberdade</li>
-                            <li>Hirsutismo (pelo em excesso)</li>
-                            <li>Infertilidade</li>
+                            <li>
+                                <%= specialties.endo.list1 %>
+                            </li>
+                            <li>
+                                <%= specialties.endo.list2 %>
+                            </li>
+                            <li>
+                                <%= specialties.endo.list3 %>
+                            </li>
+                            <li>
+                                <%= specialties.endo.list4 %>
+                            </li>
+                            <li>
+                                <%= specialties.endo.list5 %>
+                            </li>
+                            <li>
+                                <%= specialties.endo.list6 %>
+                            </li>
+                            <li>
+                                <%= specialties.endo.list7 %>
+                            </li>
                         </ul>
                     </div>
                     <div id="psy" class="box5">
@@ -156,45 +212,71 @@
                             <img class="fade-in" src="../images/psychologist.jpg" alt="">
                         </a>
                         <h3 class="h3__inset1 fade-in">
-                            <a href="mb.html">Psicologia</a>
+                            <a href="mb.html">
+                                <%= specialties.psy.title %>
+                            </a>
                         </h3>
                         <p class="fade-in">
-                            Nesta consulta, destacam-se:<br>
-                            A Avaliação psicológica<br>
-                            A Intervenção Psicoterapêutica de crianças, jovens e adultos em situações de:
+                            <%= specialties.psy.text %>
+                        </p>
+                        <p class="fade-in">
+                            <%= specialties.psy.text2 %>
+                        </p>
+                        <p class="fade-in">
+                            <%= specialties.psy.text3 %>
                         </p>
                         <button aria-label="Psicologia"><i class="fas fa-chevron-down"></i></button>
                         <ul class="list1__inset1">
-                            <li>Ansiedade/ou Depressão</li>
-                            <li>Distúrbios do Sono</li>
-                            <li>Problemas de Aprendizagem</li>
-                            <li>Dificuldade no Ensino Superior</li>
-                            <li>Problemas Laborais</li>
-                            <li>Problemas Conjugais</li>
-                            <li>Depressão Pós-Parto</li>
-                            <li>Problemas de Infertilidade</li>
-                            <li>Dificuldades Parentais</li>
-                            <li>Separação e Divórcio</li>
+                            <li>
+                                <%= specialties.psy.list1 %>
+                            </li>
+                            <li>
+                                <%= specialties.psy.list2 %>
+                            </li>
+                            <li>
+                                <%= specialties.psy.list3 %>
+                            </li>
+                            <li>
+                                <%= specialties.psy.list4 %>
+                            </li>
+                            <li>
+                                <%= specialties.psy.list5 %>
+                            </li>
+                            <li>
+                                <%= specialties.psy.list6 %>
+                            </li>
+                            <li>
+                                <%= specialties.psy.list7 %>
+                            </li>
+                            <li>
+                                <%= specialties.psy.list8 %>
+                            </li>
+                            <li>
+                                <%= specialties.psy.list9 %>
+                            </li>
+                            <li>
+                                <%= specialties.psy.list10 %>
+                            </li>
                         </ul>
                     </div>
                     <div id="nut" class="box5">
                         </li>
                         <a href="ds.html"><img class="fade-in" src="../images/nutrition.jpg" alt=""></a>
                         <h3 class="h3__inset2 fade-in">
-                            <a href="ds.html">Nutrição</a>
+                            <a href="ds.html">
+                                <%= specialties.nut.title %>
+                            </a>
                             <!-- https://unsplash.com/photos/QZub8Ni3x_c -->
                         </h3>
                         <p class="fade-in">
-                            Na consulta de nutrição efectua-se a avaliação das necessidades nutricionais e o
-                            planeamento
-                            alimentar personalizado a cada situação e objectivo específico.</p>
-                        <p class="fade-in">Aprender a ter hábitos alimentares saudáveis, além da perda de peso, visa
-                            uma
-                            melhoria da
-                            qualidade de vida física e emocional, bem como das mais diversas patologias.</p>
-                        <p class="fade-in">Os nutricionistas trabalham em estreita relação com os outros
-                            profissionais de
-                            saúde e em especial com a endocrinologia.</p>
+                            <%= specialties.nut.text %>
+                        </p>
+                        <p class="fade-in">
+                            <%= specialties.nut.text2 %>
+                        </p>
+                        <p class="fade-in">
+                            <%= specialties.nut.text3 %>
+                        </p>
                         <!-- <button><i class="fas fa-chevron-down"></i></button>
                 <ul class="list1__inset1">
                     <li>
