--- a/ejs/agreements.ejs
+++ b/ejs/agreements.ejs
@@ -16,7 +16,9 @@
         <section id="content">
             <div class="wrapper6">
                 <div class="heading1 fade-in">
-                    <h2>Convenções e Acordos</h2>
+                    <h2>
+                        <%= agreements.title %>
+                    </h2>
                 </div>
             </div>
             <div class="wrapper6 wrapper6__inset1">
@@ -27,9 +29,17 @@
                                 alt="AdvanceCare - Gestão de Serviços de Saúde, S.A." />
                         </a>
                         <div class="title">
-                            <h3 class="h3_inset1">AdvanceCare - Gestão de Serviços de Saúde, S.A.</h3>
-                            <p>Visite o <a href="http://advancecare.pt/" target="_blank">site AdvanceCare</a></p>
-                            <p>Seguros de saúde das seguintes seguradoras:</p>
+                            <h3 class="h3_inset1">
+                                <%= agreements.advanceCare.title %>
+                            </h3>
+                            <p>
+                                <%= agreements.advanceCare.text %><a href="http://advancecare.pt/" target="_blank">
+                                        <%= agreements.advanceCare.link %>
+                                    </a>
+                            </p>
+                            <p>
+                                <%= agreements.advanceCare.text2 %>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -104,8 +114,14 @@
                         <a href="http://www.allianz.pt/" target="_blank"></a>
                         <img src="../images/allianz.png" alt="Allianz Saúde" />
                         <div class="title">
-                            <h3 class="h3__inset1">Allianz Saúde</h3>
-                            <p>Visitar o <a href="http://www.allianz.pt/" target="_blank">site Allianz</a></p>
+                            <h3 class="h3__inset1">
+                                <%= agreements.allianz.title %>
+                            </h3>
+                            <p>
+                                <%= agreements.allianz.text %><a href="http://www.allianz.pt/" target="_blank">
+                                        <%= agreements.allianz.link %>
+                                    </a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -115,11 +131,19 @@
                             <img src="../images/future.png" alt="Future Healthcare" />
                         </a>
                         <div class="title">
-                            <h3 class="h3_inset1">Future Healthcare</h3>
-                            <p>Visite o <a href="http://www.future-healthcare.pt/victoria/rm/rede-medica.html"
-                                    target="_blank">
-                                    site Future Healthcare</a></p>
-                            <p>Seguro de saúde das seguintes seguradoras:</p>
+                            <h3 class="h3_inset1">
+                                <%= agreements.futureHealthcare.title %>
+                            </h3>
+                            <p>
+                                <%= agreements.futureHealthcare.text %>
+                                    <a href="http://www.future-healthcare.pt/victoria/rm/rede-medica.html"
+                                        target="_blank">
+                                        <%= agreements.futureHealthcare.link %>
+                                    </a>
+                            </p>
+                            <p>
+                                <%= agreements.futureHealthcare.text2 %>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -142,8 +166,14 @@
                             <img src="../images/medicare.jpg" alt="Medicare" />
                         </a>
                         <div class="title">
-                            <h3 class="h3__inset1">Medicare</h3>
-                            <p>Visitar o <a href="https://www.medicare.pt/" target="_blank">site Medicare</a></p>
+                            <h3 class="h3__inset1">
+                                <%= agreements.medicare.title %>
+                            </h3>
+                            <p>
+                                <%= agreements.medicare.text %><a href="https://www.medicare.pt/" target="_blank">
+                                        <%= agreements.medicare.link %>
+                                    </a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -154,11 +184,18 @@
                                 alt="Médis - Companhia Portuguesa de Seguros de Saúde, S.A." />
                         </a>
                         <div class="title">
-                            <h3>Médis - Companhia Portuguesa de Seguros de Saúde, S.A.</h3>
-                            <p>Visite o <a href="http://www.medis.pt/pt-pt/Pages/default.aspx" target="_blank">site
-                                    Médis</a>
+                            <h3>
+                                <%= agreements.medis.title %>
+                            </h3>
+                            <p>
+                                <%= agreements.medis.text %><a href="http://www.medis.pt/pt-pt/Pages/default.aspx"
+                                        target="_blank">
+                                        <%= agreements.medis.link %>
+                                    </a>
                             </p>
-                            <p>Seguros de saúde das seguintes seguradoras:</p>
+                            <p>
+                                <%= agreements.medis.text2 %>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -189,9 +226,14 @@
                             <img src="../images/rna.png" alt="RNA Medical" />
                         </a>
                         <div class="title">
-                            <h3>RNA Medical</h3>
-                            <p>Visitar o site da <a href="http://www.rnamedical.pt/pt/home/" target="_blank">RNA
-                                    Medical</a>
+                            <h3>
+                                <%= agreements.rna.title %>
+                            </h3>
+                            <p>
+                                <%= agreements.rna.text %><a href="http://www.rnamedical.pt/pt/home/"
+                                        target="_blank"></a>
+                                    <%= agreements.rna.link %>
+                                        </a>
                             </p>
                         </div>
                     </div>
@@ -202,8 +244,14 @@
                             <img src="../images/sams_sib.png" alt="SAMS-SIB" />
                         </a>
                         <div class="title">
-                            <h3 class="h3__inset1">SAMS-SIB</h3>
-                            <p>Visitar o <a href="http://www.sibanca.pt/" target="_blank">site SAMS-SIB</a></p>
+                            <h3 class="h3__inset1">
+                                <%= agreements.samsSib.title %>
+                            </h3>
+                            <p>
+                                <%= agreements.samsSib.text %><a href="http://www.sibanca.pt/" target="_blank">
+                                        <%= agreements.samsSib.link %>
+                                    </a>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -213,8 +261,14 @@
                             <img src="../images/ami.png" alt="Assistência Médica Internacional" />
                         </a>
                         <div class="title">
-                            <h3 class="h3__inset1">Assistência Médica Internacional</h3>
-                            <p>Visitar o <a href="https://ami.org.pt/" target="_blank">site AMI</a></p>
+                            <h3 class="h3__inset1">
+                                <%= agreements.ami.title %>
+                            </h3>
+                            <p>
+                                <%= agreements.ami.text %><a href="https://ami.org.pt/" target="_blank">
+                                        <%= agreements.ami.link %>
+                                    </a>
+                            </p>
                         </div>
                     </div>
                 </div>
