--- a/ejs/contacts_santo_tirso.ejs
+++ b/ejs/contacts_santo_tirso.ejs
@@ -18,7 +18,9 @@
         <section id="content" class="common">
             <div class="wrapper1 wrapper1__inset3">
                 <div class="heading1 fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
-                    <h2>Clinica Gynébe de Santo Tirso</h2>
+                    <h2>
+                        <%= contactsSantoTirso.title %>
+                    </h2>
                 </div>
                 <div id="map"></div>
                 <address class="our-address fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
@@ -33,15 +35,45 @@
                     </span>
                 </address>
                 <div class="schedule fade-in">
-                    <h3>Horario:</h3>
+                    <h3>
+                        <%= contactsSantoTirso.schedule.title %>
+                    </h3>
                     <ul>
-                        <li><strong>Segunda-feira:</strong> 14h-20h</li>
-                        <li><strong>Terça-feira:</strong> Encerrado (exceto para atendimento telefónico)</li>
-                        <li><strong>Quarta-feira:</strong> 09h-14h</li>
-                        <li><strong>Quinta-feira:</strong> Encerrado (exceto para atendimento telefónico)</li>
-                        <li><strong>Sexta-feira:</strong> Encerrado (exceto para atendimento telefónico)</li>
-                        <li><strong>Sábado:</strong> Encerrado (exceto para atendimento telefónico)</li>
-                        <li><strong>Domingo:</strong> Encerrado</li>
+                        <li><strong>
+                                <%= contactsSantoTirso.schedule.monday %>
+                            </strong>
+                            <%= contactsSantoTirso.schedule.mondayTime %>
+                        </li>
+                        <li><strong>
+                                <%= contactsSantoTirso.schedule.tuesday %>
+                            </strong>
+                            <%= contactsSantoTirso.schedule.tuesdayTime %>
+                        </li>
+                        <li><strong>
+                                <%= contactsSantoTirso.schedule.wednesday %>
+                            </strong>
+                            <%= contactsSantoTirso.schedule.wednesdayTime %>
+                        </li>
+                        <li><strong>
+                                <%= contactsSantoTirso.schedule.thursday %>
+                            </strong>
+                            <%= contactsSantoTirso.schedule.thursdayTime %>
+                        </li>
+                        <li><strong>
+                                <%= contactsSantoTirso.schedule.friday %>
+                            </strong>
+                            <%= contactsSantoTirso.schedule.fridayTime %>
+                        </li>
+                        <li><strong>
+                                <%= contactsSantoTirso.schedule.saturday %>
+                            </strong>
+                            <%= contactsSantoTirso.schedule.saturdayTime %>
+                        </li>
+                        <li><strong>
+                                <%= contactsSantoTirso.schedule.sunday %>
+                            </strong>
+                            <%= contactsSantoTirso.schedule.sundayTime %>
+                        </li>
                     </ul>
                 </div>
             </div>
