--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -16,8 +16,12 @@
         <section id="content">
             <div class="img-container">
                 <div class="teaser">
-                    <span class="first">Paixão pela Vida</span>
-                    <span class="second">inspirada por si</span>
+                    <span class="first">
+                        <%= index.teaserFirst %>
+                    </span>
+                    <span class="second">
+                        <%= index.teaserSecond %>
+                    </span>
                 </div>
                 <div class="scroll-down"></div>
             </div>
@@ -48,148 +52,202 @@
         </div> -->
             <div id="wrapper2" class="wrapper2 wrapper2__inset1">
                 <div class="heading1 fade-in">
-                    <h2>A nossa Missão</h2>
+                    <h2>
+                        <%= index.mission.title %>
+                    </h2>
                 </div>
                 <div class="box4-wrapper1">
                     <div class="box4">
                         <img class="fade-in" src="../images/page2_img1.png" alt="">
                         <h6 class="fade-in">
-                            Na Clínica Gynébe todos os colaboradores estão vocacionados e orientados para o servir
-                            melhor
-                            através de uma ampla oferta de serviços dirigidos à mulher, à criança e à família.
+                            <%= index.mission.first %>
                         </h6>
                         <h6 class="fade-in">
-                            Em suma, uma
-                            organização especialmente pensada para a prevenção e combate à doença, bem como para a
-                            promoção
-                            da qualidade de vida, em termos físicos e psíquicos, e sempre com respeito pela
-                            sensibilidade
-                            emocional e individualidade humana.
+                            <%= index.mission.second %>
                         </h6>
                     </div>
                 </div>
             </div>
             <div id="wrapper3" class="wrapper3">
                 <div class="heading2 fade-in">
-                    <h5>A Equipa</h5>
+                    <h5>
+                        <%= index.team.title %>
+                    </h5>
                 </div>
                 <div class="box3-wrapper1">
                     <div class="box3 fade-in">
                         <a href="mca.html">
                             <img src="../images/mca.jpg" alt="">
                         </a>
-                        <h3><a href="mca.html">Dra. Manuela Calado Araújo</a></h3>
-                        <p>Ginecologista/Obstetra</p>
+                        <h3><a href="mca.html">
+                                <%= index.team.mca.name %>
+                            </a></h3>
+                        <p>
+                            <%= index.team.mca.specialty %>
+                        </p>
                     </div>
 
                     <div class="box3 fade-in">
                         <a href="gv.html">
                             <img src="../images/gv.jpg" alt="">
                         </a>
-                        <h3><a href="gv.html">Dra. Gabriela Vasconcellos</a></h3>
-                        <p>Pediatra/Neonatologista</p>
+                        <h3><a href="gv.html">
+                                <%= index.team.gv.name %>
+                            </a></h3>
+                        <p>
+                            <%= index.team.gv.specialty %>
+                        </p>
                     </div>
 
                     <div class="box3 fade-in">
                         <a href="ac.html"><img src="../images/profile.png" alt=""></a>
                         <h3>
-                            <a href="ac.html">Dra. Ana Carriço</a>
+                            <a href="ac.html">
+                                <%= index.team.ac.name %>
+                            </a>
                         </h3>
-                        <p>Cardiologista Pedriátrica</p>
+                        <p>
+                            <%= index.team.ac.specialty %>
+                        </p>
                     </div>
 
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <a href="lc.html">
                             <img src="../images/lc.jpg" alt="">
                         </a>
-                        <h3><a href="lc.html">Dra. Leonilde Coelho</a></h3>
-                        <p>Endocrinologista</p>
+                        <h3><a href="lc.html">
+                                <%= index.team.lc.name %>
+                            </a></h3>
+                        <p>
+                            <%= index.team.lc.specialty %>
+                        </p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <a href="ds.html"><img src="../images/profile.png" alt=""></a>
                         <h3>
-                            <a href="ds.html">Dra. Dília Soares</a>
+                            <a href="ds.html">
+                                <%= index.team.ds.name %>
+                            </a>
                         </h3>
-                        <p>Nutricionista</p>
+                        <p>
+                            <%= index.team.ds.specialty %>
+                        </p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <a href="mb.html"><img src="../images/profile.png" alt=""></a>
                         <h3>
-                            <a href="mb.html">Dra. Marta Baltar</a>
+                            <a href="mb.html">
+                                <%= index.team.mb.name %>
+                            </a>
                         </h3>
-                        <p>Psicóloga/Psicoterapeuta</p>
+                        <p>
+                            <%= index.team.mb.specialty %>
+                        </p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <img src="../images/profile.png" alt="">
                         <h3>
-                            <a>Filipa Gomes</a>
+                            <a>
+                                <%= index.team.fg.name %>
+                            </a>
                         </h3>
-                        <p>Assistente Operacional</p>
+                        <p>
+                            <%= index.team.fg.specialty %>
+                        </p>
                     </div>
                     <div class="box3 fade-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <img src="../images/profile.png" alt="">
                         <h3>
-                            <a>Francisco Araújo</a>
+                            <a>
+                                <%= index.team.fa.name %>
+                            </a>
                         </h3>
-                        <p>Assistente Informático</p>
+                        <p>
+                            <%= index.team.fa.specialty %>
+                        </p>
                     </div>
                 </div>
             </div>
             <div id="wrapper4" class="wrapper4">
                 <div class="heading1 fade-in">
-                    <h2>Os Melhores Cuidados de Saúde</h2>
+                    <h2>
+                        <%= index.bestCare.title %>
+                    </h2>
                 </div>
                 <div class="list1">
                     <div class="slide-in">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Atendimento personalizado</p>
+                        <p>
+                            <%= index.bestCare.first %>
+                        </p>
                     </div>
                     <div class="slide-in">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Consultas em português, inglês e espanhol</p>
+                        <p>
+                            <%= index.bestCare.second %>
+                        </p>
                     </div>
                     <div class="slide-in">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Espaço infantil</p>
+                        <p>
+                            <%= index.bestCare.third %>
+                        </p>
                     </div>
 
                     <div class="slide-in">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Forte componente humana de todos os profissionais</p>
+                        <p>
+                            <%= index.bestCare.fourth %>
+                        </p>
                     </div>
                     <div class="slide-in">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Profissionais com elevada experiência clínica</p>
+                        <p>
+                            <%= index.bestCare.fifth %>
+                        </p>
                     </div>
                     <div class="slide-in">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Fácil acesso para pessoas de mobilidade reduzida</p>
+                        <p>
+                            <%= index.bestCare.sixth %>
+                        </p>
                     </div>
 
                     <div class="slide-in">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Respeito pela individualidade e sensibilidade pessoal</p>
+                        <p>
+                            <%= index.bestCare.seventh %>
+                        </p>
                     </div>
                     <div class="slide-in">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Diferenciação técnica dos serviços prestados</p>
+                        <p>
+                            <%= index.bestCare.eighth %>
+                        </p>
                     </div>
                     <div class="slide-in">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Localização em pelo coração da cidade do Porto</p>
-                    </div>
-
-                    <div class="slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
-                        <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Amplos serviços na saúde da mulher, da criança e da família</p>
+                        <p>
+                            <%= index.bestCare.ninth %>
+                        </p>
                     </div>
                     <div class="slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Reconhecimento dos serviços prestados pelos nossos utentes</p>
+                        <p>
+                            <%= index.bestCare.tenth %>
+                        </p>
                     </div>
                     <div class="slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
                         <i class="fa fa-check" aria-hidden="true"></i>
-                        <p>Acordos e Parcerias com a maioria das convenções</p>
+                        <p>
+                            <%= index.bestCare.eleventh %>
+                        </p>
+                    </div>
+                    <div class="slide-in" data-wow-duration="1s" data-wow-delay="0.4s">
+                        <i class="fa fa-check" aria-hidden="true"></i>
+                        <p>
+                            <%= index.bestCare.twelfth %>
+                        </p>
                     </div>
                 </div>
             </div>
